apps/hello-world/overlays/test/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  rules:
    - host: hello-world.local.computer
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-service
                port:
                  number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - host: hello-world-old.local.computer
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  name: http
