apps/hello-world/overlays/test/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: trivial-go-web-app
  ports:
    - name: http
      port: 80
      targetPort: http
